--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MypageActivity"></activity>
+
+        <activity android:name="com.example.denky.greattimetable.AppInformation"
+            android:theme="@style/Theme.AppCompat.Dialog"></activity>
+            <!--android:theme="@style/Theme.AppCompat.Dialog"-->
+
     </application>
 
 </manifest>
