--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         </activity>
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".MypageActivity"></activity>
+        <activity android:name=".SignupActivity"></activity>
 
         <activity android:name="com.example.denky.greattimetable.AppInformation"
             android:theme="@style/Theme.AppCompat.Dialog"></activity>
