--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".MypageActivity"></activity>
         <activity android:name=".SignupActivity"></activity>
+        <activity android:name=".ContestActivity"></activity>
 
         <activity android:name="com.example.denky.greattimetable.AppInformation"
             android:theme="@style/Theme.AppCompat.Dialog"></activity>
